--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
           </td>
         </tr>
       </table>
+            <dl id="accordion">
+              <dt class="tab">Q&A集【新規実装！】</dt>
+              <dt>Q1:メールアドレスがない場合は？</dt>
+              <dd>フリーアドレスを取得しましょう</dd>
+              <dt>Q2:性別入力は必須ですか？</dt>
+              <dd>お客様にあった情報を提供しやすくなるため、合ったほうが好ましいです。</dd>
+              <dt>Q3:お問い合わせ内容は必須ですか？</dt>
+              <dd>お客様にあった情報を提供しやすくなるため、合ったほうが好ましいです。</dd>
+            </dl>
       <input type="submit" value="送 信" class="send">
     </form>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="contact.js"></script>
   </body>
 </html>
